--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 <a href="#!" class="header_link">понравилось</a>
 <a href="#!" class="header_link">личный кабинет</a>
 <a href="#!" class="header_link">настройки</a>
+<a href="#!" class="header_link">новая коллекция</a>
 <a href="#!" class="basket"><img src="img/basket.svg" alt="basket"></a>
 <a href="#!" class="search"><img src="img/search.svg" alt="search"></a>
 </div>
